--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+title: YF Blog
+SEOTitle: YU的博客 | YF Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: lyfeivp@gmail.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+keyword: "YF, YF Blog, YF的博客, LeeElvis, CFD, Aircraft, Engineering"
+url: "http://leeelvis.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/leeelvis/leeelvis.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
